@@ -20,6 +20,8 @@ public class SectionService {
     private final SectionRepository sectionRepository;
     private final CourseRepository courseRepository;
     private final TestResultRepository testResultRepository;
+    private final BlobStorageService blobStorageService;
+    private final TestService testService;
 
     public SectionResponse addSection(Long courseId, String title) {
 
@@ -39,7 +41,7 @@ public class SectionService {
                         : course.getSections()
 
                         //  Ta sista section i listan (högst orderIndex pga @OrderBy("orderIndex ASC"))
-                          .get(course.getSections().size() - 1)
+                          .getLast()
 
                         //  Hämta dess orderIndex
                           .getOrderIndex()
@@ -70,6 +72,15 @@ public class SectionService {
                 .stream()
                 .map(section -> mapToResponse(section, entraId))
                 .toList();
+    }
+
+    // =========================
+    // DELETE SECTIONS
+    // =========================
+    public void deleteSection(Long sectionId) {
+        blobStorageService.deleteSectionFiles(sectionId);
+        testService.deleteSectionQuestions(sectionId);
+        sectionRepository.deleteById(sectionId);
     }
 
     // =========================
